# disk-doctor

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  index.html  package.json
docs/superpowers/plans/: 2026-03-28-disk-doctor.md
docs/superpowers/specs/: 2026-03-28-disk-doctor-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  log.rs  main.rs  scanner.rs  types.rs
src/components/: ConfirmDialog.tsx  ContextMenu.tsx  DetailPanel.tsx  DiskUsageBar.tsx  FileList.tsx  FileRow.tsx  Hint.tsx  PermissionGuide.tsx  ScanModal.tsx  ShortcutOverlay.tsx  StatusBar.tsx  Titlebar.tsx  Toolbar.tsx  WelcomeScreen.tsx
src/hooks/: useTauri.ts
src/state/: categories.ts  context.ts  helpers.ts  reducer.ts  store.ts  types.ts
src/styles/: index.css
