[package]
name = "disk-doctor"
version = "0.1.0"
description = "A macOS disk analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "disk_doctor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
walkdir = "2"
rayon = "1.10"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
